--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 
 {% block title %}
-    my first blog
+    Welcome to my Blog
 {% endblock%}
 
 {% block content %}
