--- a/mysite/blog/templates/blog/footer.html
+++ b/mysite/blog/templates/blog/footer.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
 <div class="container">
   <hr>
-  <p class="text-center"><a>Floow Your Heart</a></p>
+  <p class="text-center">Create by Austin</p>
 </div>
