--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -6,9 +6,18 @@
 
 {% block content %}
 <h1>My Blog List</h1>
+  {% if tag %}
+      <h2>Posts tagged with "{{ tag.name }}"</h2>
+  {% endif %}
   {% for post in posts %}
   <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
-  <p>Tags: {{ post.tags.all | join:"," }}</p>
+  <p>
+	Tags: 
+	  {% for tag in post.tags.all %}
+	    <a href="{% url 'blog:post_list_tag' tag.slug %}">{{ tag.name }}</a>
+	    {% if not forloop.last %}, {% endif %}
+	  {% endfor %}
+  </p>	  
   <p>Published {{ post.published }}by{{ post.author }}</p>
   {% endfor %}
   {% include 'blog/post/pagination.html' %}
