--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -1,5 +1,7 @@
 {% extends 'blog/base.html' %}
 
+{% load blog_tags %}
+
 {% block title %}
   {{ post.title }}
 {% endblock %}
@@ -8,7 +10,7 @@
 <h1>{{ post.title }}</h1>
 <p>{{ post.published }} by {{ post.author }}</p>
 <div>
-  {{ post.body }}
+  {{ post.body | markdown }}
 </div>
 <div>
   <p><a href="{% url "blog:post_share" post.id %}"> Share this Post</a></p>
