--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -15,13 +15,13 @@
   {% for post in posts %}
   <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
   <p>
-	Tags: 
-	  {% for tag in post.tags.all %}
-	    <a href="{% url 'blog:post_list_tag' tag.slug %}">{{ tag.name }}</a>
-	    {% if not forloop.last %}, {% endif %}
-	  {% endfor %}
+    Tags: 
+      {% for tag in post.tags.all %}
+	      <a href="{% url 'blog:post_list_tag' tag.name %}">{{ tag.slug }}</a>
+	      {% if not forloop.last %}, {% endif %}
+	    {% endfor %}
   </p>	  
-  <p>Published {{ post.published }}by{{ post.author }}</p>
+  <p>Published {{ post.published }} by {{ post.author }}</p>
   {% endfor %}
   {% include 'blog/post/pagination.html' %}
 </article>
