--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -1,24 +1,24 @@
 @charset "utf-8";
-.container {
+.crop_container {
 	width: 400px;
-	margin: 40px auto 0 auto;
+	margin: 10px 5px 0 5px;
 	position: relative;
 	font-family: 微软雅黑;
 	font-size: 12px;
 }
-.container p {
+.crop_container p {
 	line-height: 12px;
 	line-height: 0px;
 	height: 0px;
 	margin: 10px;
 	color: #bbb
 }
-.action {
+.crop_action {
 	width: 400px;
 	height: 30px;
 	margin: 10px 0;
 }
-.cropped {
+.crop_cropped {
 	position: absolute;
 	right: -230px;
 	top: 0;
@@ -29,7 +29,7 @@
 	box-shadow: 0px 0px 12px #ddd;
 	text-align: center;
 }
-.imageBox {
+.crop_imageBox {
 	position: relative;
 	height: 400px;
 	width: 400px;
@@ -38,9 +38,9 @@
 	overflow: hidden;
 	background-repeat: no-repeat;
 	cursor: move;
-	box-shadow: 4px 4px 12px #B0B0B0; 
+	box-shadow: 4px 4px 12px #B0B0B0;
 }
-.imageBox .thumbBox {
+.crop_imageBox .crop_thumbBox {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -54,7 +54,7 @@
 	box-shadow: 0 0 0 1000px rgba(0, 0, 0, 0.5);
 	background: none repeat scroll 0% 0% transparent;
 }
-.imageBox .spinner {
+.crop_imageBox .crop_spinner {
 	position: absolute;
   top: 0;
   left: 0;
@@ -65,7 +65,7 @@
   color: #2F2A2A;
   background: rgba(213, 211, 211, 0.7);
 }
-.Btnsty_peyton{ float: right;
+.crop_Btnsty_peyton{ float: right;
    width: 66px;
   display: inline-block;
   margin-bottom: 10px;
@@ -81,18 +81,18 @@
   box-shadow: 0px 0px 5px #B0B0B0;
   border: 0px #fff solid;}
 /*选择文件上传*/
-.new-contentarea {
+.crop_new-contentarea {
 	width: 165px;
 	overflow:hidden;
 	margin: 0 auto;
 	position:relative;float:left;
 }
-.new-contentarea label {
+.crop_new-contentarea label {
 	width:100%;
 	height:100%;
 	display:block;
 }
-.new-contentarea input[type=file] {
+.crop_new-contentarea input[type=file] {
 	width:188px;
 	height:60px;
 	background:#333;
