--- a/mysite/articles/templates/base.html
+++ b/mysite/articles/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body>
-    {% include 'images/header.html' %}
+    {% include 'blog/header.html' %}
 
     <div class="container">
       {% if request.user.is_authenticated %}
@@ -29,7 +29,7 @@
       {% endblock %}
     </div>
 
-    {% include 'images/footer.html' %}
+    {% include 'blog/footer.html' %}
 
     {% block script %}
     {% endblock %}
