--- a/mysite/images/templates/images/header.html
+++ b/mysite/images/templates/images/header.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
 <div class="container">
-  <img src="{% static 'images/header.jpg' %}" class="img-responsive center-block">
+  <img src="{% static 'images/header1.jpg' %}" class="img-responsive center-block">
   <h1 class="text-center">On The Way</h1>
 </div>
