--- a/mysite/articles/templates/article/publish_article.html
+++ b/mysite/articles/templates/article/publish_article.html
@@ -5,6 +5,7 @@
 {% block title %}My Articles{% endblock %}
 
 {% block content %}
+<h3>My Articles Form:</h3>
 <form action="." method="post" class="form-horizontal">{% csrf_token %}
 {{form.as_p}}
 <input type="submit" value="PUBLISH">
@@ -42,8 +43,9 @@
         },
         resize: 'vertical',
         localStorage: 'md',
-        imgurl: '/c/imgUpload',
-        base64url: '/c/imgUpload'
+        imgurl: '/media/images',
+        base64url: '/media/images',
     });
 </script>
+
 {% endblock %}
