--- a/mysite/blog/templates/blog/header.html
+++ b/mysite/blog/templates/blog/header.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
 <div class="container">
-  <img src="{% static 'images/header.jpg' %}" class="img-responsive center-block">
-  <h1 class="text-center">On The Way</h1>
+  <img src="{% static 'images/header1.jpg' %}" class="img-responsive center-block">
+  <h1 class="text-center">Learn Django On The Way</h1>
 </div>
